Fixed LL1 table and AST tree